carte de base avec carte facile

--- a/carto/index.html
+++ b/carto/index.html
@@ -28,7 +28,7 @@
             // Création la carte
             let map = new maplibregl.Map({
                 container: 'map', // id du conteneur de la carte
-                style: CarteFacile.mapStyles.simple, // Style de carte
+                style: CarteFacile.mapStyles.desaturated, // Style de carte
                 minZoom: 1.8, // niveau de zoom minimum (optionnel)
                 maxZoom: 18.9, // niveau de zoom maximum, adapté aux cartes utilisant les données IGN
                 zoom: 5, // niveau de zoom inital (optionnel)
