--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Structure de page reprise de "Carte facile" IGN -->
+<!-- https://fab-geocommuns.github.io/carte-facile-site/fr/documentation/exemples/carte-simple-maplibre-cdn/ -->
 <html>
     <head>
         <meta charset="utf-8">
@@ -41,8 +43,9 @@
 
         <!-- Légende -->
          <div id="legend">
-            <span style="display: inline-block; width: 1em; height: 1em; background-color: #11437E;"></span>Quartiers aisés<br>
-            <span style="display: inline-block; width: 1em; height: 1em; background-color:#FA5A5A ;"></span>Quartiers pauvres<br>
+            <span style="display: inline-block; width: 1em; height: 1em; border: 2px solid black; background-color: #11437E;"></span>Quartiers aisés<br>
+            <span style="display: inline-block; width: 1em; height: 1em; border: 2px solid black; background-color:#FA5A5A ;"></span>Quartiers pauvres<br>
+            <span style="display: inline-block; width: 1em; height: 1em; border: 2px solid #004A4E;"></span>Quartiers prioritaires de la ville 2024<br>
          </div>
 
         <!-- Le script qui initialise la carte -->
@@ -76,8 +79,12 @@
             // this is so we share one instance across the JS code and the map renderer
             protocol.add(new pmtiles.PMTiles('quartiers_aises.pmtiles'));
             protocol.add(new pmtiles.PMTiles('quartiers_pauvres.pmtiles'));
+            protocol.add(new pmtiles.PMTiles('qpv2024.pmtiles'));
 
             map.on('load', () => {
+                map.setProjection({
+                    type: 'mercator',
+                });
 
                 // Quartiers aisés
                 map.addSource("quartiers_aises_source", {
@@ -94,7 +101,7 @@
                     'source-layer': 'quartiers_aises',
                     'paint': {
                         'line-color': "black",
-                        'line-width': 3
+                        'line-width': 1
                     }
                 })
 
@@ -123,7 +130,7 @@
                     'source-layer': 'quartiers_pauvres',
                     'paint': {
                         'line-color': "black",
-                        'line-width': 3
+                        'line-width': 1
                     }
                 })
 
@@ -135,6 +142,25 @@
                     'paint': {
                         'fill-color': '#FA5A5A',
                         'fill-opacity': 0.6
+                    }
+                })
+
+                
+                // QPV
+                map.addSource("qpv_source", {
+                    type: 'vector',
+                    url: 'pmtiles://qpv2024.pmtiles'
+                }
+                )
+
+                map.addLayer({
+                    'id': "qpv_layer",
+                    'type': 'line',
+                    'source': 'qpv_source',
+                    'source-layer': 'qpv2024',
+                    'paint': {
+                        'line-color': "#004A4E",
+                        'line-width': 5
                     }
                 })
             })
